Final CORS fix